--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
         "scripting",
         "activeTab",
         "tabs",
-        "storage"
+        "storage",
+        "downloads"
     ],
     "web_accessible_resources": [
         {
